k8s/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: order-api
        image: 412200680627.dkr.ecr.eu-central-1.amazonaws.com/chatbot-order-api:amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-api-service
  namespace: chatbot
spec:
  selector:
    app: order-api
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
